# config/openapi.yml
@@ -24,6 +24,8 @@ paths:
     get:
       description: Returns a specific team
       operationId: getByName
+      security:
+        - bearerAuth: []
       parameters:
         - name: team_name
           required: true
@@ -43,6 +45,8 @@ paths:
     get:
       description: Returns all available teams
       operationId: getAll
+      security:
+        - bearerAuth: []
       responses:
         200:
           description: Success
@@ -53,6 +57,8 @@ paths:
     post:
       description: Add a team to the list
       operationId: add
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -77,6 +83,8 @@ paths:
     put:
       description: Update a team in the list
       operationId: update
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -100,6 +108,10 @@ paths:
                     type: string
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
   schemas:
     GetAllTeamsResponse:
       type: object
